--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         <label class="form-group-lable" for="name">Ім'я</label>
                         <input class="form-group-input" type="text" id="name">
                         <svg width="18" height="18" class="form-group-icon">
-                            <use href="./images/icons.svg#icon-formperson"></use>
+                            <use href="./images/person.svg"></use>
                         </svg>
                     </div>
 
