--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
             <div class="mailing">
             <label for="mailing-mail"></label>
-            <input type="email" class="mailing-input" placeholder="E-mail" id="mailing-mail">
+            <input type="email" class="mailing-input"name="For-email" placeholder="E-mail" id="mailing-mail">
             <button class="mailing-btn" type="submit">Підписатися
                 <svg class="mailing-icon">
                     <use href="./images/icons.svg#icon-send"></use>
@@ -481,15 +481,15 @@
                     <strong class="form-title">Залиште свої дані, ми вам передзвонимо</strong>
                     <div class="form-group">
                         <label class="form-group-lable" for="name">Ім'я</label>
-                        <input class="form-group-input" type="text" id="name">
+                        <input class="form-group-input" name="username" type="text" id="name">
                         <svg width="18" height="18" class="form-group-icon">
-                            <use href="./images/person.svg"></use>
+                            <use href="./images/icons.svg#formperson"></use>
                         </svg>
                     </div>
 
                     <div class="form-group">
                         <label class="form-group-lable" for="tel">Телефон</label>
-                        <input class="form-group-input" type="tel" id="tel">
+                        <input class="form-group-input" name="user-phone"type="tel" id="tel">
                         <svg width="18" height="18" class="form-group-icon">
                             <use href="./images/icons.svg#formphone"></use>
                         </svg>
@@ -497,7 +497,7 @@
 
                     <div class="form-group">
                         <label class="form-group-lable" for="mail">Пошта</label>
-                        <input class="form-group-input" type="email" id="mail">
+                        <input class="form-group-input" name="user-email"type="email" id="mail">
                         <svg width="18" height="18" class="form-group-icon">
                             <use href="./images/icons.svg#formmail"></use>
                         </svg>
