HW6 після правок ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -305,6 +305,20 @@
                         </li>
                     </ul>
              </div>
+             <form class="mailing-form">
+            <strong class="mailing-title">Підпишіться на розсилку</strong>
+
+            <div class="mailing">
+            <label for="mailing-mail"></label>
+            <input type="email" class="mailing-input"name="For-email" placeholder="E-mail" id="mailing-mail">
+            <button class="mailing-btn" type="submit">Підписатися
+                <svg class="mailing-icon">
+                    <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+            </button>
+            </div>
+            
+        </form>
 
     </div> 
 
